src/grammar_opt/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> includes arrays_def pointers temporals functions main
Rule 2     program -> includes arrays_def pointers temporals main
Rule 3     includes -> includes include
Rule 4     includes -> include
Rule 5     include -> INCLUDE STDIO_H
Rule 6     include -> INCLUDE MATH_H
Rule 7     arrays_def -> arrays_def array_def
Rule 8     arrays_def -> array_def
Rule 9     array_def -> DOUBLE ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 10    pointers -> pointers pointer
Rule 11    pointers -> pointer
Rule 12    pointer -> DOUBLE ID ASSIGN NUMBER SEMICOLON
Rule 13    temporals -> DOUBLE list_temporals SEMICOLON
Rule 14    list_temporals -> list_temporals COMMA ID
Rule 15    list_temporals -> ID
Rule 16    functions -> functions function
Rule 17    functions -> function
Rule 18    function -> VOID ID LPAREN RPAREN LBRACE body RBRACE
Rule 19    main -> INT MAIN LPAREN RPAREN LBRACE body RBRACE
Rule 20    body -> body statement
Rule 21    body -> statement
Rule 22    statement -> return
Rule 23    statement -> assignment
Rule 24    statement -> if_goto
Rule 25    statement -> goto
Rule 26    statement -> label
Rule 27    statement -> print
Rule 28    statement -> array_assign
Rule 29    statement -> call
Rule 30    return -> RET expression SEMICOLON
Rule 31    return -> RET SEMICOLON
Rule 32    assignment -> ID ASSIGN expression SEMICOLON
Rule 33    if_goto -> IF LPAREN expression RPAREN GOTO ID SEMICOLON
Rule 34    goto -> GOTO ID SEMICOLON
Rule 35    label -> ID COLON
Rule 36    print -> PRINTF LPAREN STRING COMMA expression RPAREN SEMICOLON
Rule 37    array_assign -> ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
Rule 38    call -> ID LPAREN RPAREN SEMICOLON
Rule 39    expression -> NUMBER
Rule 40    expression -> ID
Rule 41    expression -> LPAREN INT RPAREN expression
Rule 42    expression -> LPAREN DOUBLE RPAREN expression
Rule 43    expression -> ID LBRACKET expression RBRACKET
Rule 44    expression -> expression EQUALS expression
Rule 45    expression -> expression NOTEQUALS expression
Rule 46    expression -> expression GREATER expression
Rule 47    expression -> expression LESS expression
Rule 48    expression -> expression GREATEREQUAL expression
Rule 49    expression -> expression LESSEQUAL expression
Rule 50    expression -> expression PLUS expression
Rule 51    expression -> expression MINUS expression
Rule 52    expression -> expression TIMES expression
Rule 53    expression -> expression DIVIDE expression
Rule 54    expression -> MINUS expression

Terminals, with rules where they appear

ASSIGN               : 12 32 37
COLON                : 35
COMMA                : 14 36
DIVIDE               : 53
DOUBLE               : 9 12 13 42
EQUALS               : 44
GOTO                 : 33 34
GREATER              : 46
GREATEREQUAL         : 48
ID                   : 9 12 14 15 18 32 33 34 35 37 38 40 43
IF                   : 33
INCLUDE              : 5 6
INT                  : 19 41
LBRACE               : 18 19
LBRACKET             : 9 37 43
LESS                 : 47
LESSEQUAL            : 49
LPAREN               : 18 19 33 36 38 41 42
MAIN                 : 19
MATH_H               : 6
MINUS                : 51 54
NOTEQUALS            : 45
NUMBER               : 9 12 39
PLUS                 : 50
PRINTF               : 36
RBRACE               : 18 19
RBRACKET             : 9 37 43
RET                  : 30 31
RPAREN               : 18 19 33 36 38 41 42
SEMICOLON            : 9 12 13 30 31 32 33 34 36 37 38
STDIO_H              : 5
STRING               : 36
TIMES                : 52
VOID                 : 18
error                : 

Nonterminals, with rules where they appear

array_assign         : 28
array_def            : 7 8
arrays_def           : 1 2 7
assignment           : 23
body                 : 18 19 20
call                 : 29
expression           : 30 32 33 36 37 37 41 42 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54
function             : 16 17
functions            : 1 16
goto                 : 25
if_goto              : 24
include              : 3 4
includes             : 1 2 3
label                : 26
list_temporals       : 13 14
main                 : 1 2
pointer              : 10 11
pointers             : 1 2 10
print                : 27
program              : 0
return               : 22
statement            : 20 21
temporals            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . includes arrays_def pointers temporals functions main
    (2) program -> . includes arrays_def pointers temporals main
    (3) includes -> . includes include
    (4) includes -> . include
    (5) include -> . INCLUDE STDIO_H
    (6) include -> . INCLUDE MATH_H

    INCLUDE         shift and go to state 4

    program                        shift and go to state 1
    includes                       shift and go to state 2
    include                        shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> includes . arrays_def pointers temporals functions main
    (2) program -> includes . arrays_def pointers temporals main
    (3) includes -> includes . include
    (7) arrays_def -> . arrays_def array_def
    (8) arrays_def -> . array_def
    (5) include -> . INCLUDE STDIO_H
    (6) include -> . INCLUDE MATH_H
    (9) array_def -> . DOUBLE ID LBRACKET NUMBER RBRACKET SEMICOLON

    INCLUDE         shift and go to state 4
    DOUBLE          shift and go to state 8

    arrays_def                     shift and go to state 5
    include                        shift and go to state 6
    array_def                      shift and go to state 7

state 3

    (4) includes -> include .

    INCLUDE         reduce using rule 4 (includes -> include .)
    DOUBLE          reduce using rule 4 (includes -> include .)


state 4

    (5) include -> INCLUDE . STDIO_H
    (6) include -> INCLUDE . MATH_H

    STDIO_H         shift and go to state 9
    MATH_H          shift and go to state 10


state 5

    (1) program -> includes arrays_def . pointers temporals functions main
    (2) program -> includes arrays_def . pointers temporals main
    (7) arrays_def -> arrays_def . array_def
    (10) pointers -> . pointers pointer
    (11) pointers -> . pointer
    (9) array_def -> . DOUBLE ID LBRACKET NUMBER RBRACKET SEMICOLON
    (12) pointer -> . DOUBLE ID ASSIGN NUMBER SEMICOLON

    DOUBLE          shift and go to state 14

    pointers                       shift and go to state 11
    array_def                      shift and go to state 12
    pointer                        shift and go to state 13

state 6

    (3) includes -> includes include .

    INCLUDE         reduce using rule 3 (includes -> includes include .)
    DOUBLE          reduce using rule 3 (includes -> includes include .)


state 7

    (8) arrays_def -> array_def .

    DOUBLE          reduce using rule 8 (arrays_def -> array_def .)


state 8

    (9) array_def -> DOUBLE . ID LBRACKET NUMBER RBRACKET SEMICOLON

    ID              shift and go to state 15


state 9

    (5) include -> INCLUDE STDIO_H .

    INCLUDE         reduce using rule 5 (include -> INCLUDE STDIO_H .)
    DOUBLE          reduce using rule 5 (include -> INCLUDE STDIO_H .)


state 10

    (6) include -> INCLUDE MATH_H .

    INCLUDE         reduce using rule 6 (include -> INCLUDE MATH_H .)
    DOUBLE          reduce using rule 6 (include -> INCLUDE MATH_H .)


state 11

    (1) program -> includes arrays_def pointers . temporals functions main
    (2) program -> includes arrays_def pointers . temporals main
    (10) pointers -> pointers . pointer
    (13) temporals -> . DOUBLE list_temporals SEMICOLON
    (12) pointer -> . DOUBLE ID ASSIGN NUMBER SEMICOLON

    DOUBLE          shift and go to state 18

    temporals                      shift and go to state 16
    pointer                        shift and go to state 17

state 12

    (7) arrays_def -> arrays_def array_def .

    DOUBLE          reduce using rule 7 (arrays_def -> arrays_def array_def .)


state 13

    (11) pointers -> pointer .

    DOUBLE          reduce using rule 11 (pointers -> pointer .)


state 14

    (9) array_def -> DOUBLE . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (12) pointer -> DOUBLE . ID ASSIGN NUMBER SEMICOLON

    ID              shift and go to state 19


state 15

    (9) array_def -> DOUBLE ID . LBRACKET NUMBER RBRACKET SEMICOLON

    LBRACKET        shift and go to state 20


state 16

    (1) program -> includes arrays_def pointers temporals . functions main
    (2) program -> includes arrays_def pointers temporals . main
    (16) functions -> . functions function
    (17) functions -> . function
    (19) main -> . INT MAIN LPAREN RPAREN LBRACE body RBRACE
    (18) function -> . VOID ID LPAREN RPAREN LBRACE body RBRACE

    INT             shift and go to state 24
    VOID            shift and go to state 25

    functions                      shift and go to state 21
    main                           shift and go to state 22
    function                       shift and go to state 23

state 17

    (10) pointers -> pointers pointer .

    DOUBLE          reduce using rule 10 (pointers -> pointers pointer .)


state 18

    (13) temporals -> DOUBLE . list_temporals SEMICOLON
    (12) pointer -> DOUBLE . ID ASSIGN NUMBER SEMICOLON
    (14) list_temporals -> . list_temporals COMMA ID
    (15) list_temporals -> . ID

    ID              shift and go to state 27

    list_temporals                 shift and go to state 26

state 19

    (9) array_def -> DOUBLE ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (12) pointer -> DOUBLE ID . ASSIGN NUMBER SEMICOLON

    LBRACKET        shift and go to state 20
    ASSIGN          shift and go to state 28


state 20

    (9) array_def -> DOUBLE ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 29


state 21

    (1) program -> includes arrays_def pointers temporals functions . main
    (16) functions -> functions . function
    (19) main -> . INT MAIN LPAREN RPAREN LBRACE body RBRACE
    (18) function -> . VOID ID LPAREN RPAREN LBRACE body RBRACE

    INT             shift and go to state 24
    VOID            shift and go to state 25

    main                           shift and go to state 30
    function                       shift and go to state 31

state 22

    (2) program -> includes arrays_def pointers temporals main .

    $end            reduce using rule 2 (program -> includes arrays_def pointers temporals main .)


state 23

    (17) functions -> function .

    INT             reduce using rule 17 (functions -> function .)
    VOID            reduce using rule 17 (functions -> function .)


state 24

    (19) main -> INT . MAIN LPAREN RPAREN LBRACE body RBRACE

    MAIN            shift and go to state 32


state 25

    (18) function -> VOID . ID LPAREN RPAREN LBRACE body RBRACE

    ID              shift and go to state 33


state 26

    (13) temporals -> DOUBLE list_temporals . SEMICOLON
    (14) list_temporals -> list_temporals . COMMA ID

    SEMICOLON       shift and go to state 34
    COMMA           shift and go to state 35


state 27

    (12) pointer -> DOUBLE ID . ASSIGN NUMBER SEMICOLON
    (15) list_temporals -> ID .

    ASSIGN          shift and go to state 28
    SEMICOLON       reduce using rule 15 (list_temporals -> ID .)
    COMMA           reduce using rule 15 (list_temporals -> ID .)


state 28

    (12) pointer -> DOUBLE ID ASSIGN . NUMBER SEMICOLON

    NUMBER          shift and go to state 36


state 29

    (9) array_def -> DOUBLE ID LBRACKET NUMBER . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 37


state 30

    (1) program -> includes arrays_def pointers temporals functions main .

    $end            reduce using rule 1 (program -> includes arrays_def pointers temporals functions main .)


state 31

    (16) functions -> functions function .

    INT             reduce using rule 16 (functions -> functions function .)
    VOID            reduce using rule 16 (functions -> functions function .)


state 32

    (19) main -> INT MAIN . LPAREN RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 38


state 33

    (18) function -> VOID ID . LPAREN RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 39


state 34

    (13) temporals -> DOUBLE list_temporals SEMICOLON .

    INT             reduce using rule 13 (temporals -> DOUBLE list_temporals SEMICOLON .)
    VOID            reduce using rule 13 (temporals -> DOUBLE list_temporals SEMICOLON .)


state 35

    (14) list_temporals -> list_temporals COMMA . ID

    ID              shift and go to state 40


state 36

    (12) pointer -> DOUBLE ID ASSIGN NUMBER . SEMICOLON

    SEMICOLON       shift and go to state 41


state 37

    (9) array_def -> DOUBLE ID LBRACKET NUMBER RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 42


state 38

    (19) main -> INT MAIN LPAREN . RPAREN LBRACE body RBRACE

    RPAREN          shift and go to state 43


state 39

    (18) function -> VOID ID LPAREN . RPAREN LBRACE body RBRACE

    RPAREN          shift and go to state 44


state 40

    (14) list_temporals -> list_temporals COMMA ID .

    SEMICOLON       reduce using rule 14 (list_temporals -> list_temporals COMMA ID .)
    COMMA           reduce using rule 14 (list_temporals -> list_temporals COMMA ID .)


state 41

    (12) pointer -> DOUBLE ID ASSIGN NUMBER SEMICOLON .

    DOUBLE          reduce using rule 12 (pointer -> DOUBLE ID ASSIGN NUMBER SEMICOLON .)


state 42

    (9) array_def -> DOUBLE ID LBRACKET NUMBER RBRACKET SEMICOLON .

    DOUBLE          reduce using rule 9 (array_def -> DOUBLE ID LBRACKET NUMBER RBRACKET SEMICOLON .)


state 43

    (19) main -> INT MAIN LPAREN RPAREN . LBRACE body RBRACE

    LBRACE          shift and go to state 45


state 44

    (18) function -> VOID ID LPAREN RPAREN . LBRACE body RBRACE

    LBRACE          shift and go to state 46


state 45

    (19) main -> INT MAIN LPAREN RPAREN LBRACE . body RBRACE
    (20) body -> . body statement
    (21) body -> . statement
    (22) statement -> . return
    (23) statement -> . assignment
    (24) statement -> . if_goto
    (25) statement -> . goto
    (26) statement -> . label
    (27) statement -> . print
    (28) statement -> . array_assign
    (29) statement -> . call
    (30) return -> . RET expression SEMICOLON
    (31) return -> . RET SEMICOLON
    (32) assignment -> . ID ASSIGN expression SEMICOLON
    (33) if_goto -> . IF LPAREN expression RPAREN GOTO ID SEMICOLON
    (34) goto -> . GOTO ID SEMICOLON
    (35) label -> . ID COLON
    (36) print -> . PRINTF LPAREN STRING COMMA expression RPAREN SEMICOLON
    (37) array_assign -> . ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (38) call -> . ID LPAREN RPAREN SEMICOLON

    RET             shift and go to state 57
    ID              shift and go to state 58
    IF              shift and go to state 59
    GOTO            shift and go to state 60
    PRINTF          shift and go to state 61

    body                           shift and go to state 47
    statement                      shift and go to state 48
    return                         shift and go to state 49
    assignment                     shift and go to state 50
    if_goto                        shift and go to state 51
    goto                           shift and go to state 52
    label                          shift and go to state 53
    print                          shift and go to state 54
    array_assign                   shift and go to state 55
    call                           shift and go to state 56

state 46

    (18) function -> VOID ID LPAREN RPAREN LBRACE . body RBRACE
    (20) body -> . body statement
    (21) body -> . statement
    (22) statement -> . return
    (23) statement -> . assignment
    (24) statement -> . if_goto
    (25) statement -> . goto
    (26) statement -> . label
    (27) statement -> . print
    (28) statement -> . array_assign
    (29) statement -> . call
    (30) return -> . RET expression SEMICOLON
    (31) return -> . RET SEMICOLON
    (32) assignment -> . ID ASSIGN expression SEMICOLON
    (33) if_goto -> . IF LPAREN expression RPAREN GOTO ID SEMICOLON
    (34) goto -> . GOTO ID SEMICOLON
    (35) label -> . ID COLON
    (36) print -> . PRINTF LPAREN STRING COMMA expression RPAREN SEMICOLON
    (37) array_assign -> . ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (38) call -> . ID LPAREN RPAREN SEMICOLON

    RET             shift and go to state 57
    ID              shift and go to state 58
    IF              shift and go to state 59
    GOTO            shift and go to state 60
    PRINTF          shift and go to state 61

    body                           shift and go to state 62
    statement                      shift and go to state 48
    return                         shift and go to state 49
    assignment                     shift and go to state 50
    if_goto                        shift and go to state 51
    goto                           shift and go to state 52
    label                          shift and go to state 53
    print                          shift and go to state 54
    array_assign                   shift and go to state 55
    call                           shift and go to state 56

state 47

    (19) main -> INT MAIN LPAREN RPAREN LBRACE body . RBRACE
    (20) body -> body . statement
    (22) statement -> . return
    (23) statement -> . assignment
    (24) statement -> . if_goto
    (25) statement -> . goto
    (26) statement -> . label
    (27) statement -> . print
    (28) statement -> . array_assign
    (29) statement -> . call
    (30) return -> . RET expression SEMICOLON
    (31) return -> . RET SEMICOLON
    (32) assignment -> . ID ASSIGN expression SEMICOLON
    (33) if_goto -> . IF LPAREN expression RPAREN GOTO ID SEMICOLON
    (34) goto -> . GOTO ID SEMICOLON
    (35) label -> . ID COLON
    (36) print -> . PRINTF LPAREN STRING COMMA expression RPAREN SEMICOLON
    (37) array_assign -> . ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (38) call -> . ID LPAREN RPAREN SEMICOLON

    RBRACE          shift and go to state 63
    RET             shift and go to state 57
    ID              shift and go to state 58
    IF              shift and go to state 59
    GOTO            shift and go to state 60
    PRINTF          shift and go to state 61

    statement                      shift and go to state 64
    return                         shift and go to state 49
    assignment                     shift and go to state 50
    if_goto                        shift and go to state 51
    goto                           shift and go to state 52
    label                          shift and go to state 53
    print                          shift and go to state 54
    array_assign                   shift and go to state 55
    call                           shift and go to state 56

state 48

    (21) body -> statement .

    RBRACE          reduce using rule 21 (body -> statement .)
    RET             reduce using rule 21 (body -> statement .)
    ID              reduce using rule 21 (body -> statement .)
    IF              reduce using rule 21 (body -> statement .)
    GOTO            reduce using rule 21 (body -> statement .)
    PRINTF          reduce using rule 21 (body -> statement .)


state 49

    (22) statement -> return .

    RBRACE          reduce using rule 22 (statement -> return .)
    RET             reduce using rule 22 (statement -> return .)
    ID              reduce using rule 22 (statement -> return .)
    IF              reduce using rule 22 (statement -> return .)
    GOTO            reduce using rule 22 (statement -> return .)
    PRINTF          reduce using rule 22 (statement -> return .)


state 50

    (23) statement -> assignment .

    RBRACE          reduce using rule 23 (statement -> assignment .)
    RET             reduce using rule 23 (statement -> assignment .)
    ID              reduce using rule 23 (statement -> assignment .)
    IF              reduce using rule 23 (statement -> assignment .)
    GOTO            reduce using rule 23 (statement -> assignment .)
    PRINTF          reduce using rule 23 (statement -> assignment .)


state 51

    (24) statement -> if_goto .

    RBRACE          reduce using rule 24 (statement -> if_goto .)
    RET             reduce using rule 24 (statement -> if_goto .)
    ID              reduce using rule 24 (statement -> if_goto .)
    IF              reduce using rule 24 (statement -> if_goto .)
    GOTO            reduce using rule 24 (statement -> if_goto .)
    PRINTF          reduce using rule 24 (statement -> if_goto .)


state 52

    (25) statement -> goto .

    RBRACE          reduce using rule 25 (statement -> goto .)
    RET             reduce using rule 25 (statement -> goto .)
    ID              reduce using rule 25 (statement -> goto .)
    IF              reduce using rule 25 (statement -> goto .)
    GOTO            reduce using rule 25 (statement -> goto .)
    PRINTF          reduce using rule 25 (statement -> goto .)


state 53

    (26) statement -> label .

    RBRACE          reduce using rule 26 (statement -> label .)
    RET             reduce using rule 26 (statement -> label .)
    ID              reduce using rule 26 (statement -> label .)
    IF              reduce using rule 26 (statement -> label .)
    GOTO            reduce using rule 26 (statement -> label .)
    PRINTF          reduce using rule 26 (statement -> label .)


state 54

    (27) statement -> print .

    RBRACE          reduce using rule 27 (statement -> print .)
    RET             reduce using rule 27 (statement -> print .)
    ID              reduce using rule 27 (statement -> print .)
    IF              reduce using rule 27 (statement -> print .)
    GOTO            reduce using rule 27 (statement -> print .)
    PRINTF          reduce using rule 27 (statement -> print .)


state 55

    (28) statement -> array_assign .

    RBRACE          reduce using rule 28 (statement -> array_assign .)
    RET             reduce using rule 28 (statement -> array_assign .)
    ID              reduce using rule 28 (statement -> array_assign .)
    IF              reduce using rule 28 (statement -> array_assign .)
    GOTO            reduce using rule 28 (statement -> array_assign .)
    PRINTF          reduce using rule 28 (statement -> array_assign .)


state 56

    (29) statement -> call .

    RBRACE          reduce using rule 29 (statement -> call .)
    RET             reduce using rule 29 (statement -> call .)
    ID              reduce using rule 29 (statement -> call .)
    IF              reduce using rule 29 (statement -> call .)
    GOTO            reduce using rule 29 (statement -> call .)
    PRINTF          reduce using rule 29 (statement -> call .)


state 57

    (30) return -> RET . expression SEMICOLON
    (31) return -> RET . SEMICOLON
    (39) expression -> . NUMBER
    (40) expression -> . ID
    (41) expression -> . LPAREN INT RPAREN expression
    (42) expression -> . LPAREN DOUBLE RPAREN expression
    (43) expression -> . ID LBRACKET expression RBRACKET
    (44) expression -> . expression EQUALS expression
    (45) expression -> . expression NOTEQUALS expression
    (46) expression -> . expression GREATER expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression GREATEREQUAL expression
    (49) expression -> . expression LESSEQUAL expression
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . MINUS expression

    SEMICOLON       shift and go to state 66
    NUMBER          shift and go to state 67
    ID              shift and go to state 68
    LPAREN          shift and go to state 69
    MINUS           shift and go to state 70

    expression                     shift and go to state 65

state 58

    (32) assignment -> ID . ASSIGN expression SEMICOLON
    (35) label -> ID . COLON
    (37) array_assign -> ID . LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (38) call -> ID . LPAREN RPAREN SEMICOLON

    ASSIGN          shift and go to state 71
    COLON           shift and go to state 72
    LBRACKET        shift and go to state 73
    LPAREN          shift and go to state 74


state 59

    (33) if_goto -> IF . LPAREN expression RPAREN GOTO ID SEMICOLON

    LPAREN          shift and go to state 75


state 60

    (34) goto -> GOTO . ID SEMICOLON

    ID              shift and go to state 76


state 61

    (36) print -> PRINTF . LPAREN STRING COMMA expression RPAREN SEMICOLON

    LPAREN          shift and go to state 77


state 62

    (18) function -> VOID ID LPAREN RPAREN LBRACE body . RBRACE
    (20) body -> body . statement
    (22) statement -> . return
    (23) statement -> . assignment
    (24) statement -> . if_goto
    (25) statement -> . goto
    (26) statement -> . label
    (27) statement -> . print
    (28) statement -> . array_assign
    (29) statement -> . call
    (30) return -> . RET expression SEMICOLON
    (31) return -> . RET SEMICOLON
    (32) assignment -> . ID ASSIGN expression SEMICOLON
    (33) if_goto -> . IF LPAREN expression RPAREN GOTO ID SEMICOLON
    (34) goto -> . GOTO ID SEMICOLON
    (35) label -> . ID COLON
    (36) print -> . PRINTF LPAREN STRING COMMA expression RPAREN SEMICOLON
    (37) array_assign -> . ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (38) call -> . ID LPAREN RPAREN SEMICOLON

    RBRACE          shift and go to state 78
    RET             shift and go to state 57
    ID              shift and go to state 58
    IF              shift and go to state 59
    GOTO            shift and go to state 60
    PRINTF          shift and go to state 61

    statement                      shift and go to state 64
    return                         shift and go to state 49
    assignment                     shift and go to state 50
    if_goto                        shift and go to state 51
    goto                           shift and go to state 52
    label                          shift and go to state 53
    print                          shift and go to state 54
    array_assign                   shift and go to state 55
    call                           shift and go to state 56

state 63

    (19) main -> INT MAIN LPAREN RPAREN LBRACE body RBRACE .

    $end            reduce using rule 19 (main -> INT MAIN LPAREN RPAREN LBRACE body RBRACE .)


state 64

    (20) body -> body statement .

    RBRACE          reduce using rule 20 (body -> body statement .)
    RET             reduce using rule 20 (body -> body statement .)
    ID              reduce using rule 20 (body -> body statement .)
    IF              reduce using rule 20 (body -> body statement .)
    GOTO            reduce using rule 20 (body -> body statement .)
    PRINTF          reduce using rule 20 (body -> body statement .)


state 65

    (30) return -> RET expression . SEMICOLON
    (44) expression -> expression . EQUALS expression
    (45) expression -> expression . NOTEQUALS expression
    (46) expression -> expression . GREATER expression
    (47) expression -> expression . LESS expression
    (48) expression -> expression . GREATEREQUAL expression
    (49) expression -> expression . LESSEQUAL expression
    (50) expression -> expression . PLUS expression
    (51) expression -> expression . MINUS expression
    (52) expression -> expression . TIMES expression
    (53) expression -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 79
    EQUALS          shift and go to state 80
    NOTEQUALS       shift and go to state 81
    GREATER         shift and go to state 82
    LESS            shift and go to state 83
    GREATEREQUAL    shift and go to state 84
    LESSEQUAL       shift and go to state 85
    PLUS            shift and go to state 86
    MINUS           shift and go to state 87
    TIMES           shift and go to state 88
    DIVIDE          shift and go to state 89


state 66

    (31) return -> RET SEMICOLON .

    RBRACE          reduce using rule 31 (return -> RET SEMICOLON .)
    RET             reduce using rule 31 (return -> RET SEMICOLON .)
    ID              reduce using rule 31 (return -> RET SEMICOLON .)
    IF              reduce using rule 31 (return -> RET SEMICOLON .)
    GOTO            reduce using rule 31 (return -> RET SEMICOLON .)
    PRINTF          reduce using rule 31 (return -> RET SEMICOLON .)


state 67

    (39) expression -> NUMBER .

    SEMICOLON       reduce using rule 39 (expression -> NUMBER .)
    EQUALS          reduce using rule 39 (expression -> NUMBER .)
    NOTEQUALS       reduce using rule 39 (expression -> NUMBER .)
    GREATER         reduce using rule 39 (expression -> NUMBER .)
    LESS            reduce using rule 39 (expression -> NUMBER .)
    GREATEREQUAL    reduce using rule 39 (expression -> NUMBER .)
    LESSEQUAL       reduce using rule 39 (expression -> NUMBER .)
    PLUS            reduce using rule 39 (expression -> NUMBER .)
    MINUS           reduce using rule 39 (expression -> NUMBER .)
    TIMES           reduce using rule 39 (expression -> NUMBER .)
    DIVIDE          reduce using rule 39 (expression -> NUMBER .)
    RBRACKET        reduce using rule 39 (expression -> NUMBER .)
    RPAREN          reduce using rule 39 (expression -> NUMBER .)


state 68

    (40) expression -> ID .
    (43) expression -> ID . LBRACKET expression RBRACKET

    SEMICOLON       reduce using rule 40 (expression -> ID .)
    EQUALS          reduce using rule 40 (expression -> ID .)
    NOTEQUALS       reduce using rule 40 (expression -> ID .)
    GREATER         reduce using rule 40 (expression -> ID .)
    LESS            reduce using rule 40 (expression -> ID .)
    GREATEREQUAL    reduce using rule 40 (expression -> ID .)
    LESSEQUAL       reduce using rule 40 (expression -> ID .)
    PLUS            reduce using rule 40 (expression -> ID .)
    MINUS           reduce using rule 40 (expression -> ID .)
    TIMES           reduce using rule 40 (expression -> ID .)
    DIVIDE          reduce using rule 40 (expression -> ID .)
    RBRACKET        reduce using rule 40 (expression -> ID .)
    RPAREN          reduce using rule 40 (expression -> ID .)
    LBRACKET        shift and go to state 90


state 69

    (41) expression -> LPAREN . INT RPAREN expression
    (42) expression -> LPAREN . DOUBLE RPAREN expression

    INT             shift and go to state 91
    DOUBLE          shift and go to state 92


state 70
